--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="content">
-        <div id="waz"">
+        <div id="waz">
         </div>
         </div>
         <div>
